--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Signchain Web</title>
+    <title>Signchain Web | Beta</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Digital Signing Platform for Legal Contracts.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
